--- a/main.html
+++ b/main.html
@@ -8,7 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div>
+		<img src="https://images.unsplash.com/photo-1625859043880-56acbcb6a6ac?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBhbmRhc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="There is an panda image">
+	</div>
+		<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
